<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SinglePlayerGameSetupFragment"
    android:background="@android:color/darker_gray">

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <RadioGroup
        android:id="@+id/difficulty_group"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/v_easy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_easy"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:id="@+id/easy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:id="@+id/med_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:id="@+id/hard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:id="@+id/v_hard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_hard"
            android:textColor="@android:color/white"/>

    </RadioGroup>

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ok_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_group" />

</android.support.constraint.ConstraintLayout>